@@ -16,6 +16,8 @@ In particular, this release provides:
 Bug fixes
 ---------
 
+* [`2495 <https://cta-redmine.irap.omp.eu/issues/2495>`_] -
+  Fix handling of q-mode parameters
 * [`2420 <https://cta-redmine.irap.omp.eu/issues/2420>`_] -
   Keep existing library path in installation script on Mac OS X
 
