@@ -1,7 +1,7 @@
 /***************************************************************************
  *                GApplicationPar.i - Application parameter class          *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2010-2017 by Juergen Knoedlseder                         *
+ *  copyright (C) 2010-2018 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -79,6 +79,7 @@ public:
     bool               is_valid(void);
     bool               is_undefined(void);
     bool               is_notanumber(void);
+    bool               was_queried(void) const;
 };
 
 
