@@ -25,6 +25,7 @@ The following methods have been added:
 - gammalib::plaw_integral()
 - gammalib::gauss_integral()
 - GSkyDir::cos_dist()
+- GApplicationPar::was_queried()
 - GCTAInstDir::theta()
 - GCTAInstDir::phi()
 - GCTABackground::rate_ebin()
@@ -60,7 +61,9 @@ Keep existing library path in installation script on Mac OS X (#2420)
 
 4. Application module
 ---------------------
-None
+Add GApplicationPar::was_queried() method and do no longer change the mode
+of queried parameters to hidden. This makes sure that the correct mode will
+be written to the parfile, also for q-mode parameters (#2495).
 
 
 5. Base module
