@@ -3,6 +3,7 @@
         * Version 1.6.0 released
         ========================
 
+        Fix handling of q-mode parameters (#2495)
         Speed up computation of diffuse map models for CTA (#2466)
         Enhance GModelSpatialRadialProfileGauss class (#2463)
         Increase integration precision for CTA diffuse model response (#2458)
